# spdlogExample

./: .clang-format  CMakeLists.txt  conanfile.py
app/: CMakeLists.txt  myApp.cpp
cmake/: compilerFlags.cmake  findDependencies.cmake  mainSetup.cmake
lib/: CMakeLists.txt
lib/include/myLib/: myLib.h
lib/src/: myLib.cpp
